# sinkhorn

./: .gitignore  README.md  image_grid_sinkhorn.py  pyproject.toml  root_tracking_benchmark.py  sinkhorn.Rnw  sinkhorn.md  sinkhorn_benchmark.py  sinkhorn_mt.c  sinkhorn_mt_benchmark.py
