[project]
name = "sinkhorn-demo"
version = "0.1.0"
description = "Tiny NumPy benchmark comparing exact assignment and Sinkhorn transport."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=12.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]

[tool.uv]
package = false
